# turningjane-web

./: readme.md
backend-turningjane/: .env  .gitignore  Cargo.toml  go.mod  go.sum  main.go
backend-turningjane/controllers/: admin_controller.go  genre_controller.go  songs_controller.go  users_controller.go
backend-turningjane/models/: models.go  users_model.go
backend-turningjane/routes/: route.go
backend-turningjane/src/: main.rs
backend-turningjane/utils/: utils.go
frontend-turningjane/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json
frontend-turningjane/src/: App.tsx  index.tsx
frontend-turningjane/src/components/: Footer.tsx  Navbar.tsx
frontend-turningjane/src/components/Admin/: AdminList_page.tsx  AdminLogin_page.tsx  Dashboard_page.tsx  GenreAdmin_page.tsx  SongAdmin_page.tsx
frontend-turningjane/src/components/Landing/: MusicGrid.tsx  gallery.tsx  index.tsx  videoplayer.tsx
frontend-turningjane/src/styles/: global.css
frontend-turningjane/src/types/: motion-solid.d.ts  youtube.d.ts
